--- a/news.html
+++ b/news.html
@@ -12,6 +12,18 @@
     <div class="background">
          <img src="image/01.PNG" alt="no image">
     </div>
+
+    <!--thì lúc mình code xong
+    bật terminal lên
+ghi git init
+git add .
+git commit -m "ghi chú"
+xong r copy dòng git remote add origin ở github vô
+xong rồi git push origin master
+là xong
+-->
+
+<!--Ví dụ file này đã up  lên git rồi mà mình thay đổi -->
     <div class="container">
         <div class="header">
             <div class="header-right">
